<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".PeticionActivity"
    tools:showIn="@layout/activity_peticion">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_peticion"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TabHost
        android:id="@+id/TabHostPeticion"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/tab_p1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/EdtTxt_ubicacion_peticion_item"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp"
                        android:hint="Ubicacion" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/EdtTxt_funcinario_peticion_item"
                        android:layout_toEndOf="@+id/EdtTxt_ubicacion_peticion_item"
                        android:layout_toRightOf="@+id/EdtTxt_ubicacion_peticion_item"
                        android:src="@mipmap/ic_region" />

                    <EditText
                        android:id="@+id/EdtTxt_funcinario_peticion_item"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/EdtTxt_ubicacion_peticion_item"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/functionary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/EdtTxt_tipo_peticion_item"
                        android:layout_toEndOf="@+id/EdtTxt_ubicacion_peticion_item"
                        android:layout_toRightOf="@+id/EdtTxt_ubicacion_peticion_item"
                        android:src="@mipmap/ic_region" />

                    <EditText
                        android:id="@+id/EdtTxt_tipo_peticion_item"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/EdtTxt_funcinario_peticion_item"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/Type" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/EdtTxt_razon_peticion_item"
                        android:layout_toEndOf="@+id/EdtTxt_funcinario_peticion_item"
                        android:layout_toRightOf="@+id/EdtTxt_funcinario_peticion_item"
                        android:src="@mipmap/ic_region" />

                    <EditText
                        android:id="@+id/EdtTxt_razon_peticion_item"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/EdtTxt_tipo_peticion_item"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/Reason" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/EdtTxt_razon_peticion_item"
                        android:layout_toEndOf="@+id/EdtTxt_tipo_peticion_item"
                        android:layout_toRightOf="@+id/EdtTxt_tipo_peticion_item"
                        android:src="@mipmap/ic_region" />

                    <Button
                        android:id="@+id/btn_item_send_meesage"
                        android:layout_width="236dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/EdtTxt_razon_peticion_item"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="48dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/send"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/tab_p2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/RecView_Tab_p02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_p3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/RecView_Tab_p03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_p4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/RecView_Tab_p04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>